# CFXS-HWD-Debug-Probe

./: .gitignore  .gitmodules  CFXS-HWD-Debug-Probe.code-workspace  CMakeLists.txt  README.md
CFXS_HWD_Debug_Probe/: CMakeLists.txt  _Defines.cmake  _Modules.cmake
CFXS_HWD_Debug_Probe/src/: CFXS_HWD_Debug_Probe.cpp
Dev/HDL/: VHDL_Project.lua
Dev/HDL/src/: main.vhd
Dev/Lattice/: CFXS_HWD_ICE40_TestDev_sbt.project  CFXS_HWD_ICE40_TestDev_syn.prd  CFXS_HWD_ICE40_TestDev_syn.prj  stdout.log.bak  synlog.tcl
Dev/Lattice/CFXS_HWD_ICE40_TestDev_Implmnt/: AutoConstraint_CFXS_HWD_TestDev.sdc  AutoConstraint_main.sdc  CFXS_HWD_ICE40_TestDev.edf  CFXS_HWD_ICE40_TestDev.htm  CFXS_HWD_ICE40_TestDev.sap  CFXS_HWD_ICE40_TestDev.scf  CFXS_HWD_ICE40_TestDev.srd  CFXS_HWD_ICE40_TestDev.srm  CFXS_HWD_ICE40_TestDev.srr  CFXS_HWD_ICE40_TestDev.srs  CFXS_HWD_ICE40_TestDev_cck.rpt  CFXS_HWD_ICE40_TestDev_fpga_mapper.htm  CFXS_HWD_ICE40_TestDev_multi_srs_gen.htm  CFXS_HWD_ICE40_TestDev_premap.htm  CFXS_HWD_ICE40_TestDev_scck.rpt  rpt_CFXS_HWD_TestDev.areasrr  rpt_CFXS_HWD_TestDev_areasrr.htm  rpt_main.areasrr  rpt_main_areasrr.htm  run_options.txt  scratchproject.prs
Dev/Quartus/: CFXS_HWD_TestDev.qpf  CFXS_HWD_TestDev.qsf  CFXS_HWD_TestDev.qsf_backup  CFXS_HWD_TestDev.qws
Dev/Quartus/db/: .cmp.kpt  CFXS_HWD_TestDev.(0).cnf.cdb  CFXS_HWD_TestDev.(0).cnf.hdb  CFXS_HWD_TestDev.(1).cnf.cdb  CFXS_HWD_TestDev.(1).cnf.hdb  CFXS_HWD_TestDev.(2).cnf.cdb  CFXS_HWD_TestDev.(2).cnf.hdb  CFXS_HWD_TestDev.ace_cmp.bpm  CFXS_HWD_TestDev.ace_cmp.cdb  CFXS_HWD_TestDev.ace_cmp.hdb  CFXS_HWD_TestDev.acvq.rdb  CFXS_HWD_TestDev.asm.qmsg  CFXS_HWD_TestDev.asm.rdb  CFXS_HWD_TestDev.atom_fit.nvd  CFXS_HWD_TestDev.atom_map.nvd  CFXS_HWD_TestDev.cbx.xml  CFXS_HWD_TestDev.cmp.idb  CFXS_HWD_TestDev.cmp.logdb  CFXS_HWD_TestDev.cmp.rdb  CFXS_HWD_TestDev.cmp_merge.kpt  CFXS_HWD_TestDev.db_info  CFXS_HWD_TestDev.eco.cdb  CFXS_HWD_TestDev.eda.qmsg  CFXS_HWD_TestDev.fit.qmsg  CFXS_HWD_TestDev.hier_info  CFXS_HWD_TestDev.hif  CFXS_HWD_TestDev.lpc.html  CFXS_HWD_TestDev.lpc.rdb  CFXS_HWD_TestDev.lpc.txt  CFXS_HWD_TestDev.map.bpm  CFXS_HWD_TestDev.map.cdb  CFXS_HWD_TestDev.map.hdb  CFXS_HWD_TestDev.map.kpt  CFXS_HWD_TestDev.map.qmsg  CFXS_HWD_TestDev.map.rdb  CFXS_HWD_TestDev.map_bb.cdb  CFXS_HWD_TestDev.map_bb.hdb  CFXS_HWD_TestDev.npp.qmsg  CFXS_HWD_TestDev.pplq.rdb  (+18 more)
(+85 files in other folders)
